Remove dead code and apply IntelliJ inspections
- AdminController: drop unused userRepository + import, remove dead 5-arg toDto overload, add ArrayList import to replace inline fully-qualified new, remove redundant ResponseEntity type witnesses
- PortfolioService: narrow adjustToTradingDay to private, use getLast()/getFirst(), use Objects::nonNull method ref
- StockPriceService: remove Javadoc comment (no-comments rule), use getFirst()
- PortfolioController/YouTubeApiService: get(0)/get(size-1) → getFirst()/getLast()
- spy-chart, return-badge: remove unused CommonModule (templates use only built-in @for/@if control flow)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>